--- a/components/job-item.module.css
+++ b/components/job-item.module.css
@@ -1,8 +1,25 @@
-/* main {
-  background: #f6f6f6;
-  padding: 1.2rem;
-} */
+.jobItem {
+  position: relative;
+  margin-bottom: 3rem;
+  /* padding-top: 2.5rem; */
+}
 
-/* ul li {
-  list-style: none;
-} */
+.jobItem > * {
+  text-decoration: none;
+  color: inherit;
+}
+
+.jobItem h3 {
+  margin-top: 0.25rem;
+  line-height: 1.5rem;
+}
+
+.logoContainer {
+  background: white;
+  border-radius: 50%;
+  border: 1px solid #ccc;
+  height: 65px;
+  min-width: 65px;
+  margin-right: 1rem;
+  overflow: hidden;
+}
