--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,9 @@
 html,
 body {
+  background: #f6f6f6;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-size: 16px;
+  font-size: 1em;
   line-height: 1.5em;
 }
 
@@ -12,7 +13,6 @@ body {
   box-sizing: border-box;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+main {
+  padding: 1.2rem;
 }
