--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+:root {
+  --card-box-shadow: 0.15rem 0.15rem 0.17rem -0.1rem rgba(0, 0, 0, 0.25),
+    0rem 0rem 0.5rem -0.3rem rgba(0, 0, 0, 0.16);
+}
+
 html,
 body {
   background: #f6f6f6;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  color: rgba(0, 0, 0, 87);
+  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 1em;
   line-height: 1.5em;
@@ -14,5 +22,5 @@ body {
 }
 
 main {
-  padding: 1.2rem;
+  padding: 4.75rem 1.2rem 2.75rem;
 }
