--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -11,6 +11,14 @@
   line-height: 1.75rem;
 }
 
+.textSm {
+  font-size: .93rem;
+}
+
+.textCapitalize {
+  text-transform: capitalize;
+}
+
 .fontWeightNormal {
   font-weight: normal;
 }
@@ -23,8 +31,8 @@
 .card {
   background: white;
   border-radius: 6px;
-  box-shadow: 0.2rem 0.2rem 0.5rem 0px rgba(0, 0, 0, 0.24);
-  margin: 2rem auto;
+  box-shadow: var(--card-box-shadow);
+  margin: 0 auto;
   padding: 1rem 1.2rem;
 }
 
