--- a/components/search/search.module.css
+++ b/components/search/search.module.css
@@ -1,39 +1,118 @@
 .searchForm {
   background: white;
   border-radius: 0.4rem;
-  box-shadow: var(--card-box-shadow);
+  box-shadow: var(--medium-shadow);
   display: flex;
   align-items: center;
   height: 4rem;
   margin-top: 3.2rem;
-  overflow: hidden;
   padding-right: 0.7rem;
+  position: relative;
+  z-index: 1;
 }
 
-.searchInput {
-  appearance: none;
-  border: none;
-  color: rgba(0,0,0,.87);
-  height: 4rem;
-  flex: 1;
-  padding-left: 1rem;
-  font-family: 'Roboto';
-  font-size: 1.25rem;
-  outline: 0;
-}
-
-.searchInput::placeholder {
-  color: rgba(0,0,0,.48);
-  font-size: 1.2rem;
+.filterButton {
+  background: none;
 }
 
 .searchButton {
-  appearance: none;
-  background: linear-gradient(to bottom right, #00a1ff, cornflowerblue);
-  border: none;
-  border-radius: 0.4rem;
-  color: white;
-  height: 45px;
-  width: 45px;
+  background: linear-gradient(to bottom right, var(--color-primary), cornflowerblue);
   margin-left: 0.5rem;
+}
+
+.filters {
+  background: white;
+  box-shadow: var(--medium-shadow);
+  border-bottom-left-radius: 0.4rem;
+  border-bottom-right-radius: 0.4rem;
+  color: rgba(0,0,0,.87);
+  padding-top: 4px;
+  position: absolute;
+  top: 91%;
+  width: 100%;
+  z-index: 2;
+}
+
+.filters hr {
+  border-top: 1px solid #ccc;
+  border-bottom: none;
+}
+
+.filters li {
+  height: 4rem;
+  padding-left: 1rem;
+  list-style: none;
+}
+
+.filters li:not(:first-of-type) {
+  border-top: 1px solid #ccc;
+}
+
+.filters input[type="search"] {
+  width: 87%;
+}
+
+.filters label {
+  margin-top: 4px;
+  font-size: 1.15rem;
+  font-weight: bold;
+}
+
+.filters input[type="checkbox"] {
+  appearance: none;
+  border: none;
+  width: 18px;
+  height: 18px;
+  margin-right: 1.55rem;
+  margin-left: 0.21rem;
+  position: relative;
+}
+
+.filters input[type="checkbox"]:focus {
+  outline: 0;
+}
+
+.filters input[type="checkbox"]:focus-visible {
+  outline: 5px auto Highlight;
+  outline: 5px auto -webkit-focus-ring-color;
+}
+
+.filters input[type="checkbox"]::before {
+  content: '';
+  cursor: pointer;
+  background: #ccc;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: background-color 0.1s ease-out;
+}
+
+.filters input[type="checkbox"]::after {
+  content: '';
+  cursor: pointer;
+  box-sizing: unset;
+  height: 5px;
+  width: 12px;
+  left: 3px;
+  top: 11px;
+  margin-top: -6px;
+  position: absolute;
+  border-bottom: solid 3px white;
+  border-left: solid 3px white;
+  background: none;
+  transform: rotate(-45deg) scale(0);
+  transition: transform 0.1s ease-out;
+}
+
+.filters input[type="checkbox"]:checked::before {
+  border-color: var(--color-primary);
+  background-color: var(--color-primary);
+}
+
+.filters input[type="checkbox"]:checked::after {
+  transform: rotate(-45deg) scale(0.9);
 }
