--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 :root {
+  --color-primary: #00a1ff;
   --card-box-shadow: 0.15rem 0.15rem 0.17rem -0.1rem rgba(0, 0, 0, 0.25),
     0rem 0rem 0.5rem -0.3rem rgba(0, 0, 0, 0.16);
+  --medium-shadow: 0.27rem 0.27rem 0.37rem 0rem rgba(0, 0, 0, 0.25);
 }
 
 html,
