--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,20 +2,35 @@
 
 :root {
   --text-color-primary: #007bc3;
-  --color-primary: #00a1ff;
+  --color-primary: #048de0;
+  --header-bg-gradient: linear-gradient(
+    to bottom right,
+    #00a1ff,
+    var(--text-color-primary)
+  );
   --card-box-shadow: 0.15rem 0.15rem 0.17rem -0.1rem rgba(0, 0, 0, 0.25),
     0rem 0rem 0.5rem -0.3rem rgba(0, 0, 0, 0.16);
   --medium-shadow: 0.27rem 0.27rem 0.37rem 0rem rgba(0, 0, 0, 0.25);
+
+  --site-max-width: 44rem;
+  --site-side-padding: 1.2rem;
 }
 
-html,
+html {
+  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 1em;
+  height: -webkit-fill-available;
+}
+
 body {
   background: #f6f6f6;
   color: rgba(0, 0, 0, 87);
-  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-size: 1em;
   line-height: 1.5em;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
 }
 
 * {
@@ -25,5 +40,7 @@ body {
 }
 
 main {
-  padding: 4.75rem 1.2rem 2.75rem;
+  padding: 4.75rem var(--site-side-padding) 2.75rem;
+  max-width: var(--site-max-width);
+  margin: 0 auto;
 }
