--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -136,3 +136,9 @@
   margin-top: 0.1rem;
   margin-bottom: 0.1rem;
 }
+
+@media screen and (max-width: 39.31249em) {
+  .hiddenSm {
+    display: none;
+  }
+}
