--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -7,11 +7,13 @@
 }
 
 .logo {
-  font-size: 1.5rem;
+  color: white;
+  font-size: 1.45rem;
   font-weight: 300;
   letter-spacing: 0.2px;
   font-family: sans-serif;
   padding-left: 1.2rem;
+  text-decoration: none;
 }
 
 .childrenContainer {
