--- a/components/job-details/job-details-footer.module.css
+++ b/components/job-details/job-details-footer.module.css
@@ -4,7 +4,7 @@
 
 @media screen and (min-width: 39.3125em) {
   .jobDetailsFooter {
-    max-width: var(--site-max-width);
+    max-width: var(--job-details-width);
   }
 
   .companyInfo {
