--- a/components/button/button.module.css
+++ b/components/button/button.module.css
@@ -16,7 +16,7 @@
 }
 
 .btn.primary {
-  background-color: white;
+  background-color: transparent;
   border: 1px solid var(--text-color-primary);
   color: var(--text-color-primary);
 }
