--- a/components/company-card/company-card.module.css
+++ b/components/company-card/company-card.module.css
@@ -9,18 +9,23 @@
   border-radius: 0.4rem;
   box-shadow: var(--card-box-shadow);
   flex-flow: column;
+  min-height: 14.5rem;
   margin-top: 2.5rem;
   overflow: hidden;
   padding: 1rem 1.2rem;
 }
 
 .companyLogoContainer {
-  background: white;
-  border: 1px solid #ddd;
   border-radius: 0.4rem;
   width: 85px;
   height: 85px;
   overflow: hidden;
+}
+
+.logoBg {
+  background-color: hsl(340, 15%, 90%);
+  width: 100%;
+  height: 100%;
 }
 
 .companyInfo {
@@ -47,12 +52,8 @@
 @media screen and (min-width: 39.3125em) {
   .companyCard {
     flex-flow: row;
-    padding: 0 var(--site-side-padding) 0 0;
-  }
-
-  .companyLogoContainer {
-    border: none;
-    border-radius: 0;
+    margin-top: 1.35rem;
+    min-height: 7.3125rem;
   }
 
   .companyInfo {
