--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -65,6 +65,11 @@
   display: flex;
 }
 
+.flexColumn {
+  display: flex;
+  flex-flow: column;
+}
+
 .alignCenter {
   align-items: center;
 }
@@ -96,6 +101,10 @@
 
 .mb2 {
   margin-bottom: 2rem;
+}
+
+.mt1 {
+  margin-top: 1rem;
 }
 
 .ml1 {
@@ -147,6 +156,13 @@
   left: 0;
   text-align: center;
   width: 100%;
+}
+
+.centeredOnPage {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .focusVisible:focus {
