--- a/components/input/input.module.css
+++ b/components/input/input.module.css
@@ -27,7 +27,7 @@
   border: none;
   border-radius: 0.4rem;
   color: rgba(0,0,0,.87);
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-size: 1rem;
   height: 4rem;
   padding-left: 1rem;
