--- a/components/search/search.module.css
+++ b/components/search/search.module.css
@@ -3,12 +3,22 @@
   border-radius: 0.4rem;
   box-shadow: var(--medium-shadow);
   display: flex;
+  flex-flow: column;
   align-items: center;
-  height: 4rem;
   margin-top: 3rem;
-  padding-right: 0.7rem;
+  max-height: 4rem;
+  overflow: hidden;
   position: relative;
+  transition: max-height 0.18s ease-out;
   z-index: 1;
+}
+
+.filtersVisible {
+  max-height: 16.0625rem;
+}
+
+.searchBarContainer {
+  width: 100%;
 }
 
 .filterButton {
@@ -18,7 +28,7 @@
 
 .searchButton {
   background: var(--color-primary);
-  margin-left: 0.5rem;
+  margin: 0 0.7rem 0 0.5rem;
 }
 
 .searchButton > span {
@@ -39,15 +49,7 @@
 }
 
 .filters {
-  background: white;
-  box-shadow: var(--medium-shadow);
-  border-bottom-left-radius: 0.4rem;
-  border-bottom-right-radius: 0.4rem;
-  color: rgba(0, 0, 0, 0.87);
-  padding-top: 4px;
-  position: absolute;
-  top: 91%;
-  width: 100%;
+  width: 100%; 
 }
 
 .filters hr {
@@ -64,6 +66,10 @@
 
 .filters li:not(:first-of-type) {
   border-top: 1px solid #ccc;
+}
+
+.filters button {
+  margin-left: 0.6rem;
 }
 
 .label {
@@ -127,11 +133,11 @@
   transform: rotate(-45deg) scale(0.9);
 }
 
-.filters button {
-  margin-left: 0.6rem;
-}
-
 @media screen and (min-width: 39.3125em) {
+  .searchForm {
+    flex-flow: row;
+  }
+
   .desktopSearchIcon {
     display: inline;
     fill: var(--color-primary);
@@ -161,6 +167,10 @@
   .searchInput::after,
   .locationInputContainer::after {
     width: calc(100% - 2rem);
+  }
+
+  .filters {
+    display: none;
   }
 
   .filterButton {
