--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -2,7 +2,7 @@
   background: white;
   box-shadow: var(--card-box-shadow);
   width: 100%;
-  padding: 1rem 0;
+  padding: 1rem 0 2rem;
 }
 
 .childrenContainer {
